--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html,body{
   margin:0;
 }
 body{
-  background:linear-gradient(180deg,#0b0c10,#000);
+    background: transparent;
   color:var(--fg);
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
   display:flex;
@@ -29,6 +29,7 @@ body{
   justify-content:center;
 }
 .card{
+    background: transparent;
   padding:28px;
   width:min(420px,100%);
   animation:fadeIn .8s ease;
