Remove Card Animation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body{
     background: transparent;
   padding:28px;
   width:min(420px,100%);
-  animation:fadeIn .8s ease;
+  animation:none;
 }
 @keyframes fadeIn{
   from{opacity:0;transform:translateY(10px)}
