--- a/index.html
+++ b/index.html
@@ -3,133 +3,136 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Lockscreen</title>
+<title>Dashboard</title>
 
-<!-- Icons -->
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
 :root{
-  --bg:#0b0c10;
-  --fg:#ffffff;
-  --muted:#a0a4aa;
-  --accent:#4da3ff;
+  --bg: #0b0c10;
+  --fg: #ffffff;
+  --muted: #9a9a9a;
+  --gold: #d4af37;
+  --tile-bg: rgba(255,255,255,0.06);
+  --tile-hover: rgba(255,255,255,0.12);
+  --radius: 18px;
 }
+
 html,body{
   height:100%;
   margin:0;
 }
+
 body{
-    background: transparent;
-  color:var(--fg);
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+  background: radial-gradient(circle at top, #141520, #07080c 70%);
+  color: var(--fg);
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
   display:flex;
-  align-items:flex-start;
   justify-content:center;
+  align-items:flex-start;
 }
-.card{
-    background: transparent;
-  padding:28px;
-  width:min(420px,100%);
-  animation:none;
+
+.dashboard{
+  width:min(560px,100%);
+  padding:26px;
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:18px;
 }
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(10px)}
-  to{opacity:1;transform:none}
-}
-.time{
-  font-size:64px;
-  font-weight:300;
-  letter-spacing:1px;
-}
-.date{
-  margin-top:6px;
-  font-size:17px;
-  color:var(--muted);
-}
-.greeting{
-  margin-top:18px;
-  font-size:22px;
-  display:flex;
-  align-items:center;
-  gap:10px;
-}
-.period{
-  margin-top:6px;
+
+/* Header */
+.header{
+  grid-column: span 2;
   font-size:14px;
-  color:var(--muted);
+  color: var(--muted);
+  letter-spacing:1px;
+  text-transform: uppercase;
+  margin-bottom:4px;
 }
-.icon{
-  font-size:22px;
-  color:var(--accent);
+
+/* Tile */
+.tile{
+  background: var(--tile-bg);
+  border-radius: var(--radius);
+  padding:20px;
+  text-decoration:none;
+  color:inherit;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  transition: background .2s ease, transform .15s ease, box-shadow .2s ease;
+}
+
+.tile:hover{
+  background: var(--tile-hover);
+  transform: translateY(-2px);
+  box-shadow: 0 8px 26px rgba(0,0,0,0.45);
+}
+
+.tile i{
+  font-size:26px;
+  color: var(--gold);
+}
+
+.tile-title{
+  font-size:18px;
+}
+
+.tile-sub{
+  font-size:14px;
+  color: var(--muted);
+}
+
+/* Large tile */
+.tile.large{
+  grid-column: span 2;
 }
 </style>
 </head>
 
 <body>
-<main class="card">
-  <div class="time" id="time">--:--</div>
-  <div class="date" id="date">--</div>
 
-  <div class="greeting">
-    <i id="icon" class="fa-solid fa-sun icon"></i>
-    <span id="greeting">Hallo</span>
-  </div>
+<main class="dashboard">
 
-  <div class="period" id="period"></div>
+  <div class="header">Übersicht</div>
+
+  <!-- Uhr -->
+  <a class="tile large" href="views/clock.html">
+    <i class="fa-solid fa-clock"></i>
+    <div class="tile-title">Uhr & Tageszeit</div>
+    <div class="tile-sub">Zeit, Datum, Begrüßung</div>
+  </a>
+
+  <!-- Wetter -->
+  <a class="tile" href="views/weather.html">
+    <i class="fa-solid fa-cloud-sun"></i>
+    <div class="tile-title">Wetter</div>
+    <div class="tile-sub">Temperatur & Zustand</div>
+  </a>
+
+  <!-- Hausstatus -->
+  <a class="tile" href="views/status.html">
+    <i class="fa-solid fa-house"></i>
+    <div class="tile-title">Hausstatus</div>
+    <div class="tile-sub">Licht, Türen, Alarm</div>
+  </a>
+
+  <!-- Energie -->
+  <a class="tile" href="views/energy.html">
+    <i class="fa-solid fa-bolt"></i>
+    <div class="tile-title">Energie</div>
+    <div class="tile-sub">Verbrauch & Status</div>
+  </a>
+
+  <!-- Nacht -->
+  <a class="tile" href="views/clock.html?mode=night">
+    <i class="fa-solid fa-moon"></i>
+    <div class="tile-title">Nachtmodus</div>
+    <div class="tile-sub">Gedimmte Anzeige</div>
+  </a>
+
 </main>
 
-<script>
-function update(){
-  const now = new Date();
-
-  // Uhrzeit
-  const hh = String(now.getHours()).padStart(2,"0");
-  const mm = String(now.getMinutes()).padStart(2,"0");
-  document.getElementById("time").textContent = `${hh}:${mm}`;
-
-  // Datum
-  const weekday = now.toLocaleDateString("de-DE",{weekday:"long"});
-  const date = now.toLocaleDateString("de-DE",{day:"2-digit",month:"long"});
-  document.getElementById("date").textContent =
-    weekday.charAt(0).toUpperCase()+weekday.slice(1)+", "+date;
-
-  // Tageszeit
-  const h = now.getHours();
-  let greeting, period, icon;
-
-  if(h < 5){
-    greeting = "Gute Nacht";
-    period = "Nacht";
-    icon = "fa-moon";
-  } else if(h < 11){
-    greeting = "Guten Morgen";
-    period = "Morgen";
-    icon = "fa-sunrise";
-  } else if(h < 17){
-    greeting = "Guten Tag";
-    period = "Tag";
-    icon = "fa-sun";
-  } else if(h < 22){
-    greeting = "Guten Abend";
-    period = "Abend";
-    icon = "fa-cloud-sun";
-  } else {
-    greeting = "Gute Nacht";
-    period = "Nacht";
-    icon = "fa-moon";
-  }
-
-  document.getElementById("greeting").textContent = greeting;
-  document.getElementById("period").textContent = "Tageszeit: "+period;
-
-  const iconEl = document.getElementById("icon");
-  iconEl.className = "fa-solid "+icon+" icon";
-}
-
-update();
-setInterval(update, 1000);
-</script>
 </body>
 </html>
