Add Calender View and split css file

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ body{
     <div class="tile-sub">Gedimmte Anzeige</div>
   </a>
 
+<!-- Kalender -->
+  <a class="tile" href="views/night.html">
+    <i class="fa-solid fa-moon"></i>
+    <div class="tile-title">Kalender</div>
+    <div class="tile-sub">Übersicht</div>
+  </a>
+
 </main>
 
 </body>
