--- a/index.html
+++ b/index.html
@@ -19,19 +19,27 @@
   --radius: 18px;
 }
 
-html,body{
-  height:100%;
+html, body{
   margin:0;
+  min-height:100%;
 }
 
 body{
-  background: radial-gradient(circle at top, #141520, #07080c 70%);
+  min-height:100vh;
+  background:
+    radial-gradient(
+      circle at top,
+      #141520 0%,
+      #07080c 70%
+    );
+  background-attachment: fixed;
   color: var(--fg);
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
   display:flex;
   justify-content:center;
   align-items:flex-start;
 }
+
 
 .dashboard{
   width:min(560px,100%);
@@ -41,17 +49,16 @@ body{
   gap:18px;
 }
 
-/* Header */
+/* ================= HEADER ================= */
 .header{
   grid-column: span 2;
   font-size:14px;
   color: var(--muted);
   letter-spacing:1px;
   text-transform: uppercase;
-  margin-bottom:4px;
 }
 
-/* Tile */
+/* ================= TILE ================= */
 .tile{
   background: var(--tile-bg);
   border-radius: var(--radius);
@@ -84,9 +91,105 @@ body{
   color: var(--muted);
 }
 
-/* Large tile */
 .tile.large{
   grid-column: span 2;
+}
+
+/* ================= PAYLOADS ================= */
+.payloads{
+  grid-column: span 2;
+  margin-top:8px;
+}
+
+.payloads details{
+  background: rgba(255,255,255,0.04);
+  border-radius: var(--radius);
+  padding:14px 18px;
+  overflow: visible;
+}
+
+.payloads summary{
+  cursor:pointer;
+  display:flex;
+  align-items:center;
+  gap:10px;
+  font-size:14px;
+  color:var(--muted);
+  list-style:none;
+}
+
+.payloads summary::-webkit-details-marker{
+  display:none;
+}
+
+.payloads summary i{
+  color: var(--gold);
+}
+
+.payload-list{
+  margin-top:14px;
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+}
+
+.payload-item{
+  background: rgba(0,0,0,0.35);
+  border-radius:14px;
+  padding:14px 16px;
+}
+
+.payload-title{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  font-size:15px;
+}
+
+.payload-title i{
+  color: var(--gold);
+}
+
+.payload-desc{
+  margin-top:4px;
+  font-size:13px;
+  color:var(--muted);
+}
+
+.payload-code{
+  margin-top:10px;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  font-size:12px;
+  background: rgba(0,0,0,0.6);
+  border-radius:12px;
+  padding:12px 42px 12px 12px;
+  color:#e6e6e6;
+
+  /* WICHTIG */
+  white-space: pre-wrap;     /* kein ... */
+  word-break: break-all;     /* lange URLs umbrechen */
+  overflow-x: auto;
+  line-height:1.45;
+
+  position:relative;
+}
+
+/* COPY BUTTON */
+.copy-btn{
+  position:absolute;
+  top:8px;
+  right:8px;
+  background: rgba(255,255,255,0.08);
+  border:none;
+  border-radius:8px;
+  color:var(--fg);
+  padding:6px 8px;
+  cursor:pointer;
+  font-size:12px;
+}
+
+.copy-btn:hover{
+  background: rgba(255,255,255,0.18);
 }
 </style>
 </head>
@@ -111,6 +214,20 @@ body{
     <div class="tile-sub">Temperatur & Zustand</div>
   </a>
 
+  <!-- Kalender -->
+  <a class="tile" href="views/calendar.html">
+    <i class="fa-solid fa-calendar-days"></i>
+    <div class="tile-title">Kalender</div>
+    <div class="tile-sub">Nächste Termine</div>
+  </a>
+
+  <!-- Media -->
+  <a class="tile" href="views/media.html">
+    <i class="fa-solid fa-music"></i>
+    <div class="tile-title">Medien</div>
+    <div class="tile-sub">Now Playing</div>
+  </a>
+
   <!-- Hausstatus -->
   <a class="tile" href="views/status.html">
     <i class="fa-solid fa-house"></i>
@@ -122,24 +239,76 @@ body{
   <a class="tile" href="views/energy.html">
     <i class="fa-solid fa-bolt"></i>
     <div class="tile-title">Energie</div>
-    <div class="tile-sub">Verbrauch & Status</div>
+    <div class="tile-sub">Verbrauch & Leistung</div>
   </a>
 
-  <!-- Nacht -->
-  <a class="tile" href="views/clock.html?mode=night">
-    <i class="fa-solid fa-moon"></i>
-    <div class="tile-title">Nachtmodus</div>
-    <div class="tile-sub">Gedimmte Anzeige</div>
-  </a>
+<!-- ================= PAYLOADS ================= -->
+<div class="payloads">
+  <details open>
+    <summary>
+      <i class="fa-solid fa-code"></i>
+      Payloads (iFrame / VIS)
+    </summary>
 
-<!-- Kalender -->
-  <a class="tile" href="views/night.html">
-    <i class="fa-solid fa-moon"></i>
-    <div class="tile-title">Kalender</div>
-    <div class="tile-sub">Übersicht</div>
-  </a>
+    <div class="payload-list">
+
+      <!-- WETTER -->
+      <div class="payload-item">
+        <div class="payload-title">
+          <span><i class="fa-solid fa-cloud-sun"></i> Wetter</span>
+        </div>
+        <div class="payload-desc">
+          Übergibt aktuelle Wetterdaten an die Weather-View.
+        </div>
+        <div class="payload-code">
+          <button class="copy-btn" onclick="copyPayload(this)">Copy</button>
+https://erikdevelopment.github.io/smart-home-tiles/views/weather.html?temp={temp}&humidity={humidity}&wind={wind}&winddir={winddir}&clouds={clouds}&rainmm={rain}&text={state}&sunrise={sunrise}&sunset={sunset}
+        </div>
+      </div>
+
+      <!-- KALENDER -->
+      <div class="payload-item">
+        <div class="payload-title">
+          <span><i class="fa-solid fa-calendar-days"></i> Kalender</span>
+        </div>
+        <div class="payload-desc">
+          Nächste Termine aus Privat- & Arbeitskalender.
+        </div>
+        <div class="payload-code">
+          <button class="copy-btn" onclick="copyPayload(this)">Copy</button>
+https://erikdevelopment.github.io/smart-home-tiles/views/calendar.html?count=0&empty=1
+        </div>
+      </div>
+
+      <!-- MEDIA -->
+      <div class="payload-item">
+        <div class="payload-title">
+          <span><i class="fa-solid fa-music"></i> Medien</span>
+        </div>
+        <div class="payload-desc">
+          Aktueller Titel, Künstler, Status (Now Playing).
+        </div>
+        <div class="payload-code">
+          <button class="copy-btn" onclick="copyPayload(this)">Copy</button>
+https://erikdevelopment.github.io/smart-home-tiles/views/media.html?title={title}&artist={artist}&album={album}&state={state}&cover={cover}
+        </div>
+      </div>
+
+    </div>
+  </details>
+</div>
+
 
 </main>
+
+<script>
+function copyPayload(btn){
+  const code = btn.parentElement.innerText.replace("Copy","").trim();
+  navigator.clipboard.writeText(code);
+  btn.innerText = "✔";
+  setTimeout(() => btn.innerText = "Copy", 1200);
+}
+</script>
 
 </body>
 </html>
